# ray-tracer-rs

./: Cargo.toml
common/: Cargo.toml
common/src/: camera.rs  lib.rs  ray.rs
in-one-weekend/: Cargo.toml
in-one-weekend/src/: hit.rs  main.rs  material.rs  sphere.rs
src/: camera.rs  hit.rs  main.rs  material.rs  ray.rs  sphere.rs  vec.rs  vec3.rs
the-next-week/: Cargo.toml
