[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Ian Mobley <ianmobley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
glam = "0.22.0"
log = "0.4.17"
rand = "0.8.4"
rayon = "1.5.1"
